actualizado error de notice

--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -3,7 +3,7 @@
     <br>
     <br>
     <div class="embed-responsive embed-responsive-16by9">
-      <iframe src="http://www.youtube.com/embed/CtKTsp0LHAQ" frameborder="0"> </iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/CtKTsp0LHAQ" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 </div>
