--- a/app/views/mascota/_form_filter.html.erb
+++ b/app/views/mascota/_form_filter.html.erb
@@ -16,7 +16,7 @@
 </div>
 
 <div class="thumbnail">
-  <%= submit_tag 'Submit', class: "btn btn-default btn-block" %>
+  <%= submit_tag 'Buscar', class: "btn btn-default btn-block" %>
 </div>
 
 <% end %>
