--- a/app/views/mascota/index.html.erb
+++ b/app/views/mascota/index.html.erb
@@ -20,8 +20,14 @@
     <legend>
       <h2 class="form-signin-heading"><%=  'Lista de mascotas'  %></h2>
     </legend><br>
-
-    <p id="notice"><%= notice %></p>
+  
+    <% if notice != nil and defined? notice %>
+      <% array = notice.split("&") %>
+			<div class="alert alert-<%= array[0] %>" role="alert">
+				<%= array[1] %>
+			</div>
+			
+		<% end %>
 
     <% @countTwo = 1 %>
     <% @mascota.each do |mascotum| %>
@@ -48,11 +54,11 @@
                 <%= mascotum.edad %> Año(s)</h<%= @fuente_normal %>>
               </li>
               <li><h<%= @fuente_normal %>><b>Tamaño: </b>
-                <%if mascotum.tamano == 1%>
+                <%if mascotum.tamano == '1'%>
                 Pequeño</h<%= @fuente_normal %>>
-                <%elsif mascotum.tamano == 2%>
+                <%elsif mascotum.tamano == '2'%>
                 Mediano</h<%= @fuente_normal %>>
-                <% else %>
+                <%elsif mascotum.tamano == '3'%>
                 Grande</h<%= @fuente_normal %>>
                 <% end %>
               </li>
@@ -72,7 +78,7 @@
                 <td><%= link_to 'Edit', edit_mascotum_path(mascotum), :class => 'btn btn-primary btn-block' %></td>
               </div>
               <div class="col-md-6">
-                <td><%= link_to 'Eliminar', mascotum, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-danger btn-block' %></td>
+                <td><%= link_to 'Eliminar', mascotum, method: :delete, data: { confirm: 'Dale en aceptar onee chan :3' }, :class => 'btn btn-danger btn-block' %></td>
               </div>
             </div>
             <% end %>
