--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -117,6 +117,10 @@
           </div><!-- /.container-fluid -->
         </nav>
 
+
+        <%= render_breadcrumbs(" ", { class: '', tag: 'li', divider_class: '/', active_class: 'active' }) %>
+
+
         <%= yield %>
 
       </div>
