--- a/app/views/mascota/edit.html.erb
+++ b/app/views/mascota/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Editing Mascotum</h1>
+<h1>Editando Mascota</h1>
 
 <%= render 'form' %>
 
+<div class="container">
 <%= link_to 'Ver mascota', @mascotum, :class => 'btn btn-info' %>
+</div>
